--- a/EcommerceAPI/appsettings.json
+++ b/EcommerceAPI/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=THEO-COMPUTER\\SQLEXPRESS;Database=ECommerceDB;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=THEO-COMPUTER\\SQLEXPRESS;Database=ECommerceDB;Trusted_connection=true;TrustServerCertificate=true"
   } 
 }
