--- a/EcommerceAPI/appsettings.json
+++ b/EcommerceAPI/appsettings.json
@@ -8,5 +8,10 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=THEO-COMPUTER\\SQLEXPRESS;Database=ECommerceDB;Trusted_connection=true;TrustServerCertificate=true"
-  } 
+  },
+  "Jwt": {
+    "Key": "SAMPLEKEY",
+    "Issuer": "https://localhost:7143/",
+    "Audience": "https://localhost:7143/"
+  }
 }
