--- a/EcommerceAPI/appsettings.json
+++ b/EcommerceAPI/appsettings.json
@@ -7,7 +7,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=THEO-COMPUTER\\SQLEXPRESS;Database=ECommerceDB;Trusted_connection=true;TrustServerCertificate=true"
+    "DefaultConnection": "Server=THEO-COMPUTER\\SQLEXPRESS;Database=ECommerceDB;Trusted_connection=true;TrustServerCertificate=true",
+    "AuthConnectionString": "Server=THEO-COMPUTER\\SQLEXPRESS;Database=ECommerceAuthDb;Trusted_Connection=True;TrustServerCertificate=True"
   },
   "Jwt": {
     "Key": "SAMPLEKEY",
