Inject TokenRepository and Create Token

--- a/EcommerceAPI/appsettings.json
+++ b/EcommerceAPI/appsettings.json
@@ -11,8 +11,9 @@
     "AuthConnectionString": "Server=THEO-COMPUTER\\SQLEXPRESS;Database=ECommerceAuthDb;Trusted_Connection=True;TrustServerCertificate=True"
   },
   "Jwt": {
-    "Key": "SAMPLEKEY",
+    "Key": "7b064345-d584-4356-a8f6-7b2ff8fc2c5b",
     "Issuer": "https://localhost:7143/",
-    "Audience": "https://localhost:7143/"
+    "Audience": "https://localhost:7143/",
+    "ExpireyMinutes": "30"
   }
 }
